{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 22,
  "lineage": "44101691-a19f-7a1d-e874-87e7682774a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "forNat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01e8aa7a6388e4977",
            "domain": "vpc",
            "id": "eipalloc-082728586bf2dc97a",
            "network_interface": "eni-084e364c51967e3e8",
            "private_dns": "ip-172-28-0-63.eu-west-1.compute.internal",
            "private_ip": "172.28.0.63",
            "public_dns": "ec2-99-80-161-1.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.80.161.1",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0047bb1e28a00e0d1",
            "arn": "arn:aws:ec2:eu-west-1:592259974624:instance/i-0ab188f45a43c9439",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab188f45a43c9439",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "estudio",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d0ab7895102281f7",
            "private_dns": "ip-172-28-3-18.eu-west-1.compute.internal",
            "private_ip": "172.28.3.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0af065bfd52ee96ed",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-007141c1bf37459d5",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d64cda358cab99fc"
            ]
          },
          "dependencies": [
            "aws_security_group.Database",
            "aws_subnet.PrivateAZA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "phpapp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0047bb1e28a00e0d1",
            "arn": "arn:aws:ec2:eu-west-1:592259974624:instance/i-0bc6690c1c70024bb",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bc6690c1c70024bb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "estudio",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0906612b3551229b1",
            "private_dns": "ip-172-28-0-69.eu-west-1.compute.internal",
            "private_ip": "172.28.0.69",
            "public_dns": "ec2-54-171-243-71.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.171.243.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-0a1307ee654fac224",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0587d398c762edbad",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a6f1dec3d29a3512"
            ]
          },
          "dependencies": [
            "aws_security_group.Backend",
            "aws_subnet.PublicAZA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f5459de2b81cf11a",
            "owner_id": "592259974624",
            "vpc_id": "vpc-057752e72b0bd5eb8"
          },
          "dependencies": [
            "aws_vpc.secret-pal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "PublicAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-082728586bf2dc97a",
            "id": "nat-08b4d970063651f9f",
            "network_interface_id": "eni-084e364c51967e3e8",
            "private_ip": "172.28.0.63",
            "public_ip": "99.80.161.1",
            "subnet_id": "subnet-0587d398c762edbad"
          },
          "dependencies": [
            "aws_eip.forNat",
            "aws_internet_gateway.gw",
            "aws_subnet.PublicAZA",
            "aws_vpc.secret-pal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 2,
                "to_port": 0
              }
            ],
            "id": "acl-01553aac459ed8729",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1,
                "to_port": 0
              }
            ],
            "owner_id": "592259974624",
            "subnet_id": null,
            "subnet_ids": [],
            "tags": {},
            "vpc_id": "vpc-057752e72b0bd5eb8"
          },
          "dependencies": [
            "aws_vpc.secret-pal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00d97d92594b07d2f",
            "owner_id": "592259974624",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-08b4d970063651f9f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-057752e72b0bd5eb8"
          },
          "dependencies": [
            "aws_eip.forNat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.PublicAZA",
            "aws_subnet.PublicAZA",
            "aws_vpc.secret-pal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ae3602d0c40a5ed3",
            "owner_id": "592259974624",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5459de2b81cf11a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-057752e72b0bd5eb8"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.secret-pal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c33e480c299ea3d",
            "route_table_id": "rtb-00d97d92594b07d2f",
            "subnet_id": "subnet-007141c1bf37459d5"
          },
          "dependencies": [
            "aws_eip.forNat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.PublicAZA",
            "aws_route_table.private",
            "aws_subnet.PrivateAZA",
            "aws_subnet.PublicAZA",
            "aws_vpc.secret-pal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0588e6e5c9f660823",
            "route_table_id": "rtb-0ae3602d0c40a5ed3",
            "subnet_id": "subnet-0587d398c762edbad"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.PublicAZA",
            "aws_vpc.secret-pal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:592259974624:security-group/sg-0a6f1dec3d29a3512",
            "description": "ONLY HTTP CONNECTION INBOUD",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6f1dec3d29a3512",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Backend",
            "name_prefix": null,
            "owner_id": "592259974624",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-057752e72b0bd5eb8"
          },
          "dependencies": [
            "aws_vpc.secret-pal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Database",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:592259974624:security-group/sg-0d64cda358cab99fc",
            "description": "ONLY tcp CONNECTION INBOUND",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d64cda358cab99fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a6f1dec3d29a3512"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database",
            "name_prefix": null,
            "owner_id": "592259974624",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-057752e72b0bd5eb8"
          },
          "dependencies": [
            "aws_security_group.Backend",
            "aws_vpc.secret-pal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:592259974624:subnet/subnet-007141c1bf37459d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.28.3.0/24",
            "id": "subnet-007141c1bf37459d5",
            "map_public_ip_on_launch": false,
            "owner_id": "592259974624",
            "vpc_id": "vpc-057752e72b0bd5eb8"
          },
          "dependencies": [
            "aws_vpc.secret-pal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicAZA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:592259974624:subnet/subnet-0587d398c762edbad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.28.0.0/24",
            "id": "subnet-0587d398c762edbad",
            "map_public_ip_on_launch": false,
            "owner_id": "592259974624",
            "vpc_id": "vpc-057752e72b0bd5eb8"
          },
          "dependencies": [
            "aws_vpc.secret-pal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "secret-pal",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:592259974624:vpc/vpc-057752e72b0bd5eb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.28.0.0/16",
            "default_network_acl_id": "acl-0e0e0ae5a59c5ad10",
            "default_route_table_id": "rtb-0663c86dd7665c95e",
            "default_security_group_id": "sg-0532c49b87dc6f843",
            "dhcp_options_id": "dopt-082ff17babe5e3fe6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-057752e72b0bd5eb8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0663c86dd7665c95e",
            "owner_id": "592259974624"
          }
        }
      ]
    }
  ]
}